GpMessages/51735640842300
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: miércoles, 19 de junio de 2024 13:50:20</msg><msg code="-2147467259" type="100">  File "C:\Users\juaco\OneDrive\Documentos\ArcGIS\Packages\DAG_1s2024_L_TRABAJO_1_PARTE_2_JBV_d59d9f\p30\dag_1s2024_l_trabajo_1_parte_2_jbv.gdb\paso 2.py", line 17
    script_tool(fcIn3, fcIn4 dirOut, outName)
                             ^
SyntaxError: invalid syntax
</msg><msg code="0" type="0">Failed script 2.1.- Unión de establecimientos...</msg><msg code="-2147467259" type="100">Failed to execute (establecimientos).</msg><msg code="0" type="3">Failed at miércoles, 19 de junio de 2024 13:50:21 (Elapsed Time: 0.46 seconds)</msg></messages>